--- a/found.html
+++ b/found.html
@@ -4,12 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="found.css">
   <title>Test found</title>
 </head>
 <body>
   <h1>Titel</h1>
-  <form action="http://localhost:3000/api" method="get"><input type="text" name="text">
-  <button> Поиск</button>
+  <form action="https://github.com/lpigas/firs_project/blob/8c70ee27068ff8a2bb7f7cb2f17a15e997259eb8/index.html" method="post">
+  <div class="foundForm">
+    Введите два слова поиска <input type="text" name="text" placeholder="тип товара и модель"> 
+    <div class="foundForm">
+      Введите свой пароль <input type="password" name="text"> </div>
+    <div class="foundForm"> 
+      <label for="name"> Запомнить пароль</label>
+      <input type="checkbox" name="remember" checked id="name">
+      
+    </div>
+      <button> Поиск</button>
+  
   </form>
 </body>
 </html>
