--- a/found.html
+++ b/found.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <h1>Titel</h1>
-  <form action="https://github.com/lpigas/firs_project/blob/8c70ee27068ff8a2bb7f7cb2f17a15e997259eb8/index.html" method="post">
+  <form action="" method="post">
   <div class="foundForm">
-    Введите два слова поиска <input type="text" name="text" placeholder="тип товара и модель"> 
-    <div class="foundForm">
-      Введите свой пароль <input type="password" name="text"> </div>
-    <div class="foundForm"> 
+    <label for="name2">Введите два слова поиска</label>  <input type="text" name="text" placeholder="тип товара и модель" required id="name2"> </div>
+  <div class="foundForm">
+    <label for="name1"> Введите свой пароль</label> <input type="password" name="text" required id="name1"> </div>
+  <div class="foundForm"> 
       <label for="name"> Запомнить пароль</label>
       <input type="checkbox" name="remember" checked id="name">
       
