--- a/found.html
+++ b/found.html
@@ -11,15 +11,29 @@
   <h1>Titel</h1>
   <form action="" method="post">
   <div class="foundForm">
-    <label for="name2">Введите два слова поиска</label>  <input type="text" name="text" placeholder="тип товара и модель" required id="name2"> </div>
-  <div class="foundForm">
-    <label for="name1"> Введите свой пароль</label> <input type="password" name="text" required id="name1"> </div>
+    <label for="name3">Введите два слова поиска</label>  
+    <input type="text" name="text" placeholder="тип товара и модель" required id="name3"> 
+  </div>
+
+
+    <div class="foundForm">
+      <label for="name2"> Почту</label> 
+      <input type="email" name="text" required id="name2"> 
+    </div>
+
+
+    <div class="foundForm">
+      <label for="name1"> Введите свой пароль</label> 
+      <input type="password" name="text" required id="name1" minlength="6"> 
+    </div>
+
+
   <div class="foundForm"> 
       <label for="name"> Запомнить пароль</label>
       <input type="checkbox" name="remember" checked id="name">
+  </div>
       
-    </div>
-      <button> Поиск</button>
+  <button> Поиск</button>
   
   </form>
 </body>
