2 new stile button problem with radio

--- a/found.html
+++ b/found.html
@@ -27,7 +27,7 @@
       <input class="field" type="checkbox" name="remember" required id="name">
       <label class="form_label" for="name"> С условиями пользоватиельского соглашения согласен</label>
   </div>
-   <div class="button"><button type="button" > сброс</button> <button type="button" > Вход</button> </div>   
+   <div class="button"><button type="reset" > сброс</button> <button type="button" > Вход</button> </div>   
   
     
   <div class="radio_d"> <input class="radio" type="radio" name="choise" value="y"> Да
