--- a/post_1.html
+++ b/post_1.html
@@ -35,7 +35,7 @@
         <a href="https://lambix.prom.ua/" target="_blank" class="link">220</a>
         <a href="https://hi-tech-odessa.com.ua/" target="_blank" class="link">208</a>
         <a href="https://b2b.delltalife.com/" target="_blank" class="link">Дельта</a>
-        <a href="https://venera-opt.com/" target="_blank" class="link">Венера</a>
+        <a href="https://venera-opt.com.ua/" target="_blank" class="link">Венера</a>
         <a href="https://empire.ua/" target="_blank" class="link">Эмпаер</a>
       </nav>
     </div>
