--- a/found.html
+++ b/found.html
@@ -32,7 +32,7 @@
     
  
 
-<label class="coloe" required>
+<label class="coloe">
   <p>Стиль сайта</p>
   <select name="color">
   <option value="" disabled selected></option>
