--- a/found.html
+++ b/found.html
@@ -29,7 +29,7 @@
   </div>
    <div class="button"><button type="reset" > сброс</button> <button type="button" > Вход</button> </div>   
   
-    <div class="red">Gtkfsdddddddddddd1ddddddddddddddddddddddddddddsd</div>
+    <div class="red">Gtkf</div>
 
 <label class="coloe">
   <p>Стиль сайта</p>
