new change buty

--- a/found.html
+++ b/found.html
@@ -8,7 +8,7 @@
   <title>Test found</title>
 </head>
 <body>
-  <h1>Titel</h1>
+  <h1>Название сайта</h1>
   <form action="http://127.0.0.1:5500/found.html" method="post">
 
     <div class="foundForm">
@@ -35,7 +35,6 @@
   <option value="" disabled selected></option>
   <option value="red">Dark</option>
   <option value="green">White</option>
-  
 </select></div>
   
   </form>
